changed USER-SERVICE name to CONFIG-USER-SERVICE

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,8 +7,8 @@ spring:
   cloud:
     gateway:
       routes:
-        - id: USER-SERVICE
-          uri: lb://USER-SERVICE
+        - id: CONFIG-USER-SERVICE
+          uri: lb://CONFIG-USER-SERVICE
           predicates:
             - Path=/users/**
 
